--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -5,7 +5,6 @@
   height: 100vh;
   margin-left: 10%;
   box-sizing: border-box;
-  border-left: 3px solid black;
   background: #FAFAFA;
 }
 
@@ -30,30 +29,33 @@
 .homeCalendarList {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  background-color: #f7f7f7;
+  background-color: white;
   height: 88vh;
-  padding: 10px;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   border: 5px solid #19A7C3;
   border-radius: 15px;
+  padding: 20px;
+  border: 2px solid #E6E6E6;
 }
 
 .noticeAndTime {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  background-color: #f7f7f7;
-  padding: 10px;
+  background-color: white;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   border: 5px solid #19A7C3;
   border-radius: 15px;
+  padding: 20px;
+  border: 2px solid #E6E6E6;
 }
 
 .todoCheckList {
+  background-color: white;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   padding: 10px;
@@ -62,13 +64,8 @@
   flex-grow: 1;
   height: 63.2vh;
   border-radius: 15px;
-}
-
-h2 {
-  font-size: 2em;
-  margin-bottom: 10px;
-  font-weight: bold;
-  border-bottom: none; 
+  padding: 20px;
+  border: 2px solid #E6E6E6;
 }
 
 .tableWrap {
@@ -93,33 +90,14 @@ h2 {
 .todoCheckList h2 {
   font-size: 2em;
   margin-bottom: 20px;
+  font-weight: bold;
 }
 
-.homeCalendarList {
-  background-color: #f7f7f7;
-  padding: 20px;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
+.homeCalendarList h2,
+.noticeAndTime h2 {
+  border-bottom: 3px solid #19A7C3;
+  padding-bottom: 10px;
 }
-
-.noticeAndTime {
-  background-color: #f7f7f7;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
-.todoCheckList {
-  background-color: white;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
 
 @media (max-width: 768px) {
   .contentContainer {
