--- a/src/Components/ToDo/ToDo.module.css
+++ b/src/Components/ToDo/ToDo.module.css
@@ -31,6 +31,8 @@
   list-style-type: none;
   overflow-y: auto;
   flex-grow: 1;
+  padding: 0; /* 기본 패딩 제거 */
+  margin: 0;  /* 기본 마진 제거 */
 }
 
 .todoLists li {
@@ -42,6 +44,7 @@
   align-items: center;
   border-bottom: 1px solid #eef0f5;
   padding-left: 5px;
+  margin: 0px;
 }
 
 .noteCheckBox {
