--- a/src/Components/Schedule/Schedule.module.css
+++ b/src/Components/Schedule/Schedule.module.css
@@ -15,47 +15,56 @@
   position: sticky; /* 고정 위치 */
   top: 0; /* 화면 상단에 고정 */
   z-index: 10; /* 리스트 위에 표시되도록 z-index 설정 */
-  border-bottom: 1px solid #ddd; /* 헤더 아래에 경계선 추가 */
+  border-bottom: 1px solid #ddd; 
 }
 
 .homeLists {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  overflow-y: auto; /* 세로 스크롤 가능 */
-  flex-grow: 1; /* 리스트 컨테이너가 남은 공간을 차지하게 설정 */
-  border-radius: 10px; /* 리스트 아이템의 모서리를 둥글게 설정 */
+  overflow-y: auto;
+  flex-grow: 1;
+  border-radius: 10px;
 }
 
 .homeLists li {
-  padding: 10px;
+  padding: 15px 15px 10px 15px; 
   margin: 5px;
   background-color: #f9f9f9;
-  border-radius: 8px; /* 리스트 아이템 모서리를 둥글게 */
-  display: flex;
-  flex-direction: column; /* 세로로 나열되도록 설정 */
-  justify-content: flex-start; /* 기본값으로 세로 정렬 */
-  align-items: flex-start; /* 왼쪽 정렬 */
-  border: 1px solid #19A7C3; /* 리스트 아이템에 테두리 추가 */
+  border-radius: 8px;
+  border: 1px solid #19A7C3;
+  position: relative;
+  margin-bottom: 40px; 
+  background-color: white;
 }
 
-.homeLists li p {
-  margin: 5px 0;
-}
-
-.dateTitle {
-  font-size: 16px;
-}
-
-.title {
-  color: #333;
-  font-size: 14px;
+.homeLists li:first-child {
+  margin-top: 30px; 
 }
 
 .description {
-  color: #666;
-  font-size: 13px;
+  color: black;
+  font-size: 15px;
+  padding-top: 0;
+  width: 100%;
+  position: relative;
+  word-wrap: break-word; /* 긴 단어가 넘어갈 때 자동으로 줄 바꿈 */
+  white-space: normal; /* 텍스트가 칸을 넘지 않도록 줄 바꿈을 허용 */
 }
-strong {
+
+.title {
+  position: absolute;
+  top: -30px;
+  left: 15px;
+  border-top: 1px solid #19A7C3;
+  border-left: 1px solid #19A7C3;
+  border-right: 1px solid #19A7C3;
+  font-size: 14px;
+  background-color: white;
+  padding: 5px 10px;
+  border-radius: 6px;
   font-weight: bold;
+  color: #3268FF;
+  z-index: 1;
 }
+
