Chore: 17_Build_Package

--- a/src/Components/Quotes/Quotes.module.css
+++ b/src/Components/Quotes/Quotes.module.css
@@ -1,7 +1,7 @@
 .totalPage {
     height: 100%;
     width: 100%;
-    background: #F5F5F5;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: center;
