--- a/src/Components/Friends/Friends.module.css
+++ b/src/Components/Friends/Friends.module.css
@@ -40,22 +40,6 @@
     margin-bottom: 5px;
 }
 
-.addFriendButton, .searchFriendButton {
-    display: flex; 
-    margin-right: 5px; 
-    background: none;
-    border: none; 
-    cursor: pointer; 
-    padding: 10px; 
-    width: 40px; 
-    height: 40px;
-}
-
-.buttonImage {
-    width: 100%; 
-    height: auto; 
-}
-
 .friendsList {
     flex: 1; 
     overflow-y: auto;
@@ -81,8 +65,8 @@
 }
 
 .friendItem.selected {
-    background: #1785A3;
-    border: 2px solid #1785A3;
+    background: #19A7C3;
+    border: 2px solid #19A7C3;
 }
 
 .chatContainer {
