--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -62,7 +62,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  height: 63.2vh;
+  height: 65vh;
   border-radius: 15px;
   border: 2px solid #E6E6E6;
 }
@@ -93,7 +93,8 @@
 }
 
 .homeCalendarList h2,
-.noticeAndTime h2 {
+.noticeAndTime h2,
+.todoCheckList h2 {
   border-bottom: 3px solid #19A7C3;
   padding-bottom: 10px;
 }
