--- a/src/Components/LoginForm/LoginForm.module.css
+++ b/src/Components/LoginForm/LoginForm.module.css
@@ -14,7 +14,10 @@ html, body {
 
 .background {
     flex: 1;
-    background-image: url('../Assets/motodo_main.jpg');
+    background-image: url('../Assets/motodo_main.png');
+    background-size: cover; /* 또는 contain */
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .wrapper {
